# tambour

./: .gitignore  CONTRIBUTING.md  README.md  prd.md  pyproject.toml  vision.md
.beads/: metadata.json
providers/: tree.sh
scripts/: setup-hooks.sh
src/tambour/: __init__.py  __main__.py  agent.py  config.py  context.py  daemon.py  events.py  finish.py  health.py  heartbeat.py  init.py  lock.py  spinoff.py  worktrees.py
src/tambour/hooks/: __init__.py  bridge.py  session_note.py
src/tambour/metrics/: __init__.py  aggregator.py  cli.py  collector.py  extractors.py
tests/: __init__.py  test_abort.py  test_agent.py  test_aggregator.py  test_bridge.py  test_config.py  test_context.py  test_events.py  test_finish.py  test_health.py  test_heartbeat.py  test_init.py  test_lock.py  test_metrics.py  test_metrics_cli.py  test_spinoff.py  test_worktrees.py
